# omnidoc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  theme-gallery.html  vite.config.ts
.github/workflows/: latest-release.yml  release.yml
docs/obsidian-toolkit/: main.js  manifest.json
docs/plugin-example/: main.js  manifest.json
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/linux/: omnidoc.desktop
src-tauri/installer/windows/: context-menu.nsh
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: archive.rs  claude.rs  claude_hooks.rs  export.rs  fs.rs  git.rs  logs.rs  menu.rs  mod.rs  plugins.rs  search.rs  terminal.rs  themes.rs  watcher.rs
src/commands/: applyMenu.ts  builtin.ts  menuDefinition.ts  shortcut.ts
src/components/claude/: AgentTimeline.tsx  ClaudePanel.tsx  ClaudePanelTerminal.tsx  ContextMeter.tsx  CostMeter.tsx  LiveTicker.tsx  MessageCard.tsx  SessionHeader.tsx  SessionPicker.tsx  ToolUseChip.tsx  TranscriptFeed.tsx  agentLanes.ts  claude.css  relTime.ts  useNow.ts
src/components/editor/: MarkdownEditor.tsx  PlainTextEditor.tsx
src/components/layout/: TabBar.tsx  (+9 more)
src/hooks/: useFileWatcher.ts  useKeyboard.ts  useTabScrollMemory.ts  useTheme.ts
src/plugins/: api.ts  pluginManager.ts
src/store/: claudeStore.ts  fileClipboardStore.ts  fileStore.ts  gitStore.ts  pluginStore.ts  starredStore.ts  terminalStore.ts  themeStore.ts  treeStore.ts  uiStore.ts
src/themes/: catppuccin-mocha.ts  dracula.ts  github-dark.ts  github-light.ts  index.ts  nord.ts  solarized-light.ts  tokens.ts  tokyo-night.ts
src/utils/: claudeCost.ts  diffParser.ts  exportUtils.ts  fileUtils.ts  folderColors.ts  formatUtils.ts  logger.ts  markdownUtils.ts  shikiUtils.ts  vttParser.ts  workspace.ts
(+44 files in other folders)
